<resources>
    <string name="app_name">Inkpad</string>
    <string name="app_version">Inkpad for Android v1.0.0</string>

    <string name="fab_content_description">Create</string>
    <string name="image_content_description">No Data Image</string>

    <string name="title_hint">Title</string>
    <string name="property_hint">Property</string>
    <string name="description_hint">Description</string>
    <string name="language_hint">Language</string>
    <string name="theme_hint">Theme</string>

    <string name="submit_btn">Submit</string>
    <string name="clear_database_btn">Clear Database</string>
    <string name="clear_cache_btn">Clear Cache</string>

    <string name="menu_search">Search</string>
    <string name="menu_sort_by">Sort By</string>
    <string name="menu_delete_all">Delete All</string>
    <string name="menu_priority_high">Priority High</string>
    <string name="menu_priority_low">Priority Low</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>

    <string-array name="priorities">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>

    <string-array name="languages">
        <item>English</item>
        <item>Ukrainian</item>
    </string-array>

    <string-array name="themes">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
</resources>