<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_sort_by"
            android:title="@string/menu_sort_by"
            android:icon="@drawable/ic_sort"
            app:showAsAction="ifRoom">
            <menu>
                <item
                    android:id="@+id/menu_priority_high"
                    android:title="@string/menu_priority_high" />
                <item
                    android:id="@+id/menu_priority_low"
                    android:title="@string/menu_priority_low" />
            </menu>
        </item>
    </group>
</menu>